--- a/script/template/settings.json
+++ b/script/template/settings.json
@@ -3,4 +3,6 @@
     "python.formatting.provider": "yapf",
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
+    "editor.tabSize": 4,
+    "editor.detectIndentation":false
 }
