--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,28 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [{
-            "name": "Python",
+            "name": "Python: File",
             "type": "python",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Python: Moudle",
+            "type": "python",
+            "request": "launch",
+            "module": "Python Moudle"
+        },
+        {
+            "name": "Python: Attach",
+            "type": "python",
+            "request": "attach",
+            "port": 5678,
+            "host": "localhost",
+            "pathMappings": [{
+                "localRoot": "${workspaceFolder}",
+                "remoteRoot": "."
+            }]
         },
         {
             "type": "bashdb",
